# comotion-sdk

./: .gitignore  Pipfile  README.md  Untitled-1.ipynb  cli_test.sh  comotion.auth.html  comotion.dash.html  genindex.html  index.html  input_file.parquet  integration_tests_out.csv  objects.inv  out.csv  py-modindex.html  pyproject.toml  run_post.py  search.html  searchindex.js  setup.py  test_auth.py  transaction.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  default.yml  publish-to-test-pypi.yml  publish_release_actions.yml  pull_request_check_docs_build.yml  run_tests_on_push.yaml
_modules/: index.html
_modules/comotion/: auth.html  dash.html
_sources/: comotion.dash.rst.txt  index.rst.txt
_static/: documentation_options.js
conda-build/: channeldata.json  index.html
conda-build/noarch/: index.html
conda-build/osx-64/: comotion-sdk-0.1.0-py37_0.tar.bz2  comotion-sdk-None-None.tar.bz2  current_repodata.json  current_repodata.json.bz2  index.html  repodata.json  repodata.json.bz2
conda-constructor/: construct.yaml
conda-recipe/: meta.yaml
docs/: requirements.txt
docs/source/: comotion.auth.rst  conf.py  index.rst
openapi_generator/: comodash_api_swagger.yaml
outputdir/: channeldata.json  index.html
outputdir/linux-32/: comotion-sdk-None-None.tar.bz2  current_repodata.json  index.html  repodata.json.bz2
src/: .openapi-generator-ignore  comodash_api_client_lowlevel_README.md  standard_dataset.parquet  temp.ipynb
tests/: test_auth.py  test_cli.py  test_dash.py  test_integration_tests.py
(+176 files in other folders)
