[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm>=6.2",
    "wheel",
    "keyring",
    "toml"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "_version.py"
local_scheme = "no-local-version"
# not supported by pypi

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = [
    "tests",
    "**/test"
]
